# ssvep-python

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
configs/: default.yaml  individual_spike_encoders.yaml  nested_multi_encoder.yaml  nested_multi_encoder_joint_pilot.yaml  quick_test.yaml  reference_study_reproduction.yaml  rf_bank_8class.yaml  single_encoder_8class.yaml
docs/: architecture.md  encoder_architecture_and_gui_plan.md  project_development_consolidation.md  resonate_and_fire_figure_plan.md
scripts/: MIGRATION.md  README.md  analyze_resonate_and_fire_personalized_overlap.py  analyze_threshold_resonance_shift.py  audit_experiment_ledger.py  evaluate_resonate_and_fire_bipolar_reference.py  finalize_reference_study_figures.py  generate_resonate_and_fire_evidence.py  launch_resonate_and_fire_deep_search.py  plot_fused_feature_embedding.py  plot_nested_multi_encoder.py  plot_resonate_and_fire_30_subject_results.py  plot_resonate_and_fire_bipolar_reference.py  plot_resonate_and_fire_deep_snapshot.py  plot_resonate_and_fire_fused_reference_snapshot.py  plot_resonate_and_fire_gain_scenarios.py  plot_resonate_and_fire_tuning_cases.py  plot_rf_input_normalization_ablation.py  plot_single_encoder_8class.py  profile_resonate_and_fire_raw_amplitudes.py  refresh_live_dashboard.py  run_advanced_multi_encoder_pilot.py  run_individual_spike_encoder_search.py  run_nested_multi_encoder.py  run_reference_study_classification.py  run_resonate_and_fire_30_subject_apparent_accuracy.py  run_resonate_and_fire_all_frequency_pilot.py  (+14 more)
(+103 files in other folders)
