[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ssvep-toolkit"
version = "0.1.0"
description = "Chunked Python processing tools for the 1-60 Hz SSVEP dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
metadata = ["openpyxl>=3.1", "pandas>=2.1"]
test = ["pytest>=8.0"]
gui = ["PySide6>=6.7"]
performance = ["numba>=0.61"]
analysis = ["scikit-learn>=1.5", "umap-learn>=0.5.7", "optuna>=4.0"]

[project.scripts]
ssvep = "ssvep_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ssvep_toolkit = ["assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
